--- a/README.rdoc
+++ b/README.rdoc
@@ -5,3 +5,5 @@ Mackenzie Child's 12 in 12 Challenge in 2 weeks.
 1: Rotten Potatoes = movie review app
 
 2: Plungr = blog app
+
+3: Fitemize = workout log app
