--- a/fitemize/README.rdoc
+++ b/fitemize/README.rdoc
@@ -1,28 +1,8 @@
-== README
+Mackenzie Child’s 12 in 12 Challenge
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Week 8:
+How To Build A Workout Log In Rails 4
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+-bootstrap
+-haml
+-simple form
