--- a/README.rdoc
+++ b/README.rdoc
@@ -8,4 +8,4 @@ Mackenzie Child's 12 in 12 Challenge in 2 weeks.
 
 3: Fitemize = workout log app
 
-4: Linkit = reddit clone
+4: linkit = reddit clone
