--- a/linkit/README.rdoc
+++ b/linkit/README.rdoc
@@ -1,7 +1,7 @@
 Mackenzie Child’s 12 in 12 Challenge
 
 Week 1:
-How To Build A Reddit Clone with Rails 4
+How To Build A Reddit Clone With Rails 4
 
 -acts as votable
 -bootstrap
