Edit main README

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
-Mackenzie Child's 12 in 12 Challenge in 2 weeks.
+Based on Mackenzie Child's 12 in 12 Challenge
 
-12 apps in 2 weeks.
+10 apps in 2 weeks.
 
 1: Rotten Potatoes = movie review app
 
