Edit main README to include wikinac

--- a/README.rdoc
+++ b/README.rdoc
@@ -13,3 +13,5 @@ Based on Mackenzie Child's 12 in 12 Challenge
 5: GetDone = todo app
 
 6: SimplyJobs = jobs board app
+
+7: Wikinac = wikipedia clone
